--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -41,7 +41,6 @@ dependencies:
   freezed: ^2.4.2
   json_annotation: ^4.8.1
   http: ^1.1.0
-  flutter_config: ^2.0.2
   go_router: ^10.1.2
   shared_preferences: ^2.2.1
   analyzer: ^6.2.0
@@ -53,6 +52,9 @@ dependencies:
   flutter_spinkit: ^5.2.0
   share_plus: ^7.1.0
   accordion: ^2.6.0
+  flutter_launcher_icons: ^0.13.1
+  flutter_dotenv: ^5.1.0
+  change_app_package_name: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +72,11 @@ dev_dependencies:
   riverpod_lint: ^2.0.3
   json_serializable: ^6.7.1
 
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/launcher_icon.png"
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -81,7 +88,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -99,23 +107,23 @@ flutter:
   fonts:
     - family: Catamaran
       fonts:
-        - asset: fonts/catamaran/Catamaran-Thin.ttf
+        - asset: assets/fonts/catamaran/Catamaran-Thin.ttf
           weight: 100
-        - asset: fonts/catamaran/Catamaran-ExtraLight.ttf
+        - asset: assets/fonts/catamaran/Catamaran-ExtraLight.ttf
           weight: 200
-        - asset: fonts/catamaran/Catamaran-Light.ttf
+        - asset: assets/fonts/catamaran/Catamaran-Light.ttf
           weight: 300
-        - asset: fonts/catamaran/Catamaran-Regular.ttf
+        - asset: assets/fonts/catamaran/Catamaran-Regular.ttf
           weight: 400
-        - asset: fonts/catamaran/Catamaran-Medium.ttf
+        - asset: assets/fonts/catamaran/Catamaran-Medium.ttf
           weight: 500
-        - asset: fonts/catamaran/Catamaran-SemiBold.ttf
+        - asset: assets/fonts/catamaran/Catamaran-SemiBold.ttf
           weight: 600
-        - asset: fonts/catamaran/Catamaran-Bold.ttf
+        - asset: assets/fonts/catamaran/Catamaran-Bold.ttf
           weight: 700
-        - asset: fonts/catamaran/Catamaran-ExtraBold.ttf
+        - asset: assets/fonts/catamaran/Catamaran-ExtraBold.ttf
           weight: 800
-        - asset: fonts/catamaran/Catamaran-Black.ttf
+        - asset: assets/fonts/catamaran/Catamaran-Black.ttf
           weight: 900
 
   #   - family: Trajan Pro
