--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_dotenv: ^5.1.0
   change_app_package_name: ^1.1.0
+  flutter_native_splash: ^2.3.2
+  flutter_local_notifications: ^15.1.1
 
 dev_dependencies:
   flutter_test:
@@ -78,6 +80,12 @@ flutter_launcher_icons:
   image_path: "assets/icon/icon.png"
   remove_alpha_ios: true
   background_color_ios: "#ffffff"
+
+flutter_native_splash:
+  color: "#334155"
+  image: "assets/icon/icon.png"
+  android: true
+  ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
