--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -56,10 +56,11 @@ dependencies:
   flutter_dotenv: ^5.1.0
   change_app_package_name: ^1.1.0
   flutter_native_splash: ^2.3.2
-  flutter_local_notifications: ^15.1.1
   flutter_timezone: ^1.0.7
-  workmanager: ^0.5.1
   timezone: ^0.9.2
+  firebase_core: ^2.15.1
+  firebase_messaging: ^14.6.7
+  skeletonizer: ^0.7.0
 
 dev_dependencies:
   flutter_test:
