--- a/.github/workflows/pr-preview.yaml
+++ b/.github/workflows/pr-preview.yaml
@@ -3,6 +3,10 @@ concurrency: pr-to-master
 on:
   pull_request:
     branches: [master]
+  # ignore if only the mobile dir changes
+  workflow_dispatch:
+    paths-ignore:
+      - "mobile/**"
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -45,9 +49,7 @@ env:
   STRIPE_API_KEY: ${{ secrets.STRIPE_API_KEY }}
   STRIPE_WEBHOOK_SECRET: ${{ secrets.STRIPE_WEBHOOK_SECRET }}
 
-  FIREBASE_PROJECT_ID: ${{ vars.FIREBASE_PROJECT_ID }}
-  FIREBASE_PRIVATE_KEY: ${{ secrets.FIREBASE_PRIVATE_KEY }}
-  FIREBASE_CLIENT_EMAIL: ${{ vars.FIREBASE_CLIENT_EMAIL }}
+  ENCODED_FIREBASE_JSON: ${{ secrets.ENCODED_FIREBASE_JSON }}
 
 jobs:
   deploy:
@@ -69,6 +71,10 @@ jobs:
       - id: install_node_deps
         name: Install Node.js dependencies
         run: npm ci
+      - id: setup_firebase_creds
+        name: Setup Firebase Credentials
+        run: |
+          echo $ENCODED_FIREBASE_JSON | base64 --decode > firebase.json
       - id: sst_deploy
         name: Deploy to AWS
         run: npx sst deploy --stage pr-${{ github.event.pull_request.number }}
