--- a/.github/workflows/prod-deploy.yaml
+++ b/.github/workflows/prod-deploy.yaml
@@ -71,7 +71,7 @@ jobs:
       - id: setup_firebase_creds
         name: Setup Firebase Credentials
         run: |
-          echo $ENCODED_FIREBASE_JSON | base64 --decode > firebase.json
+          echo $ENCODED_FIREBASE_JSON | base64 --decode > firebase-service-account.json
       - id: sst_deploy
         name: Deploy to AWS
         run: npx sst deploy --stage prod
