--- a/.github/workflows/mobile-build.yaml
+++ b/.github/workflows/mobile-build.yaml
@@ -109,4 +109,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: ios
-          path: mobile/build/ios/ipa/Runner.ipa
+          path: mobile/build/ios/archive/Runner.xcarchive
