--- a/.github/workflows/mobile-build.yaml
+++ b/.github/workflows/mobile-build.yaml
@@ -3,8 +3,10 @@ concurrency: mobile
 on:
   push:
     branches: [master]
-    paths:
-      - "mobile/**"
+    # only run if there are changes to the mobile directory
+    # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#onpushpull_requestpull_request_targetpathspaths-ignore
+    paths-ignore:
+      - "!(mobile)/**"
   workflow_dispatch:
     inputs:
       build_android:
