--- a/.github/workflows/mobile-build.yaml
+++ b/.github/workflows/mobile-build.yaml
@@ -26,8 +26,7 @@ env:
 
 jobs:
   build_android:
-    # if input is provided and input is true
-    if: ${{ inputs == null || inputs.build_android}}
+    if: inputs?.build_android ?? true
     name: Android Build
     runs-on: ubuntu-latest
     steps:
@@ -66,7 +65,7 @@ jobs:
           path: mobile/build/app/outputs/bundle/release/app-release.aab
 
   build_ios:
-    if: ${{ inputs == null || inputs.build_ios}}
+    if: inputs?.build_ios ?? true
     name: IOS Build
     runs-on: macos-latest
     steps:
