--- a/.github/workflows/mobile-build.yaml
+++ b/.github/workflows/mobile-build.yaml
@@ -26,7 +26,7 @@ env:
 
 jobs:
   build_android:
-    if: inputs.build_android || true
+    if: inputs.build_android ?? true
     name: Android Build
     runs-on: ubuntu-latest
     steps:
@@ -65,7 +65,7 @@ jobs:
           path: mobile/build/app/outputs/bundle/release/app-release.aab
 
   build_ios:
-    if: inputs.build_ios || true
+    if: inputs.build_ios ?? true
     name: IOS Build
     runs-on: macos-latest
     steps:
