--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,15 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Flutter",
+      "type": "dart",
+      "request": "launch",
+      "program": "${workspaceRoot}/mobile/lib/main.dart",
+      "args": ["--dart-define-from-file=.env"],
+      "console": "debugConsole",
+      "preLaunchTask": "prep-flutter"
+    },
+    {
       "name": "Debug SST Start",
       "type": "node",
       "request": "launch",
