--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,13 @@
       "detail": "Generate mobile code",
       "command": "cd mobile && dart run build_runner build",
       "problemMatcher": []
+    },
+    {
+      "type": "shell",
+      "label": "prep-flutter",
+      "detail": "Prep Flutter",
+      "command": "cd mobile && flutter pub get && dart run build_runner build",
+      "problemMatcher": []
     }
   ]
 }
