Sign in with apple working on server

--- a/.env.example
+++ b/.env.example
@@ -25,12 +25,16 @@ REPLICATE_IMAGE_MODEL=stability-ai/sdxl:2b017d9b67edd2ee1401238df49d75da53c523f3
 # Unstructured
 UNSTRUCTURED_API_KEY=
 
+# Apple Auth
+APPLE_CLIENT_ID=com.passgoco.revelationsai.signin
+APPLE_KEY_ID=
+APPLE_TEAM_ID=
+
 # Google Auth
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=531625373674-dn406prskcuv4db90cc7t3g56a59i259.apps.googleusercontent.com
 
 # Facebook Auth
-FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_ID=219154671082505
 FACEBOOK_CLIENT_SECRET=
 
 # Email Auth
