--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   firebase_messaging: ^14.6.7
   skeletonizer: ^0.7.0
   package_info_plus: ^4.1.0
+  flutter_web_auth_2: ^2.2.1
 
 dev_dependencies:
   flutter_test:
