--- a/.github/workflows/pr-preview.yaml
+++ b/.github/workflows/pr-preview.yaml
@@ -32,8 +32,12 @@ env:
 
   UNSTRUCTURED_API_KEY: ${{ secrets.UNSTRUCTURED_API_KEY }}
 
+  ENCODED_APPLE_AUTH_KEY: ${{ secrets.ENCODED_APPLE_AUTH_KEY }}
+  APPLE_CLIENT_ID: ${{ vars.APPLE_CLIENT_ID }}
+  APPLE_KEY_ID: ${{ vars.APPLE_KEY_ID }}
+  APPLE_TEAM_ID: ${{ vars.APPLE_TEAM_ID }}
+
   GOOGLE_CLIENT_ID: ${{ vars.GOOGLE_CLIENT_ID }}
-  GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
 
   FACEBOOK_CLIENT_ID: ${{ vars.FACEBOOK_CLIENT_ID }}
   FACEBOOK_CLIENT_SECRET: ${{ secrets.FACEBOOK_CLIENT_SECRET }}
@@ -78,6 +82,10 @@ jobs:
         name: Setup Firebase Credentials
         run: |
           echo $ENCODED_FIREBASE_JSON | base64 --decode > firebase-service-account.json
+      - id: setup_apple_auth_key
+        name: Setup Apple Auth Key
+        run: |
+          echo $ENCODED_APPLE_AUTH_KEY | base64 --decode > apple-auth-key.p8
       - id: sst_deploy
         name: Deploy to AWS
         run: npx sst deploy --stage pr-${{ github.event.pull_request.number }}
