Removing facebook auth functionality

--- a/.env.example
+++ b/.env.example
@@ -33,9 +33,10 @@ APPLE_TEAM_ID=
 # Google Auth
 GOOGLE_CLIENT_ID=531625373674-dn406prskcuv4db90cc7t3g56a59i259.apps.googleusercontent.com
 
-# Facebook Auth
-FACEBOOK_CLIENT_ID=219154671082505
-FACEBOOK_CLIENT_SECRET=
+# Removing facebook login for now due to problems with business verification
+# # Facebook Auth
+# FACEBOOK_CLIENT_ID=219154671082505
+# FACEBOOK_CLIENT_SECRET=
 
 # Email Auth
 EMAIL_FROM=noreply@revelationsai.com
