Initial trial of using an llm agent

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,10 @@ REPLICATE_IMAGE_MODEL=stability-ai/sdxl:2b017d9b67edd2ee1401238df49d75da53c523f3
 # Unstructured
 UNSTRUCTURED_API_KEY=
 
+# Google APIs
+GOOGLE_API_KEY=
+GOOGLE_CSE_ID=37e80745c342b4d31
+
 # Apple Auth
 APPLE_CLIENT_ID=com.passgoco.revelationsai.signin
 APPLE_KEY_ID=
