--- a/.github/workflows/prod-deploy.yaml
+++ b/.github/workflows/prod-deploy.yaml
@@ -33,6 +33,9 @@ env:
 
   UNSTRUCTURED_API_KEY: ${{ secrets.UNSTRUCTURED_API_KEY }}
 
+  GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+  GOOGLE_CSE_ID: ${{ vars.GOOGLE_CSE_ID }}
+
   ENCODED_APPLE_AUTH_KEY: ${{ secrets.ENCODED_APPLE_AUTH_KEY }}
   APPLE_CLIENT_ID: ${{ vars.APPLE_CLIENT_ID }}
   APPLE_KEY_ID: ${{ vars.APPLE_KEY_ID }}
