--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Flutter",
+      "name": "Flutter Dev",
       "type": "dart",
       "request": "launch",
       "program": "${workspaceRoot}/mobile/lib/main.dart",
@@ -20,14 +20,24 @@
       "preLaunchTask": "prep-flutter"
     },
     {
-      "name": "Debug SST Start",
+      "name": "Backend Dev",
       "type": "node",
       "request": "launch",
       "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/sst",
-      "runtimeArgs": ["start", "--increase-timeout"],
+      "runtimeArgs": ["dev"],
       "console": "integratedTerminal",
       "skipFiles": ["<node_internals>/**"],
-      "env": {}
+      "preLaunchTask": "npm-install"
+    },
+    {
+      "name": "Website Dev",
+      "type": "node",
+      "request": "launch",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": ["run", "dev"],
+      "console": "integratedTerminal",
+      "cwd": "${workspaceFolder}/packages/website",
+      "preLaunchTask": "npm-install"
     }
   ]
 }
