--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -1,56 +1,56 @@
 {
-  "name": "@revelationsai/website",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "sst bind 'vite dev --open'",
-    "build": "sst bind 'vite build'",
-    "preview": "sst bind 'vite preview'",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write ."
-  },
-  "devDependencies": {
-    "@iconify/svelte": "^3.1.4",
-    "@sveltejs/adapter-auto": "^2.1.0",
-    "@sveltejs/kit": "^1.25.0",
-    "@types/autosize": "^4.0.1",
-    "@types/validator": "^13.11.1",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "autoprefixer": "^10.4.16",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "daisyui": "^3.7.7",
-    "eslint": "^8.49.0",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-svelte": "^2.33.2",
-    "postcss": "^8.4.30",
-    "prettier": "^2.8.8",
-    "prettier-plugin-svelte": "^2.10.1",
-    "svelte": "^4.2.1",
-    "svelte-check": "^3.5.2",
-    "svelte-copy": "^1.4.1",
-    "svelte-intersection-observer": "^0.10.1",
-    "svelte-kit-sst": "2.25.6",
-    "svelte-share-buttons-component": "^1.5.5",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss": "^3.3.3",
-    "tailwindcss-animate": "^1.0.7",
-    "tailwindcss-brand-colors": "^0.3.3",
-    "tslib": "^2.6.2",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.9"
-  },
-  "type": "module",
-  "dependencies": {
-    "@revelationsai/core": "^1.0.0",
-    "@tanstack/svelte-query": "^4.35.3",
-    "ai": "^2.2.13",
-    "autosize": "^6.0.1",
-    "moment": "^2.29.4",
-    "stripe": "^13.6.0",
-    "validator": "^13.11.0"
-  }
+	"name": "@revelationsai/website",
+	"version": "1.0.0",
+	"private": true,
+	"scripts": {
+		"dev": "sst bind 'vite dev --open'",
+		"build": "sst bind 'vite build'",
+		"preview": "sst bind 'vite preview'",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"format": "prettier --plugin-search-dir . --write ."
+	},
+	"devDependencies": {
+		"@iconify/svelte": "^3.1.4",
+		"@sveltejs/adapter-auto": "^2.1.0",
+		"@sveltejs/kit": "^1.25.0",
+		"@types/autosize": "^4.0.1",
+		"@types/validator": "^13.11.1",
+		"@typescript-eslint/eslint-plugin": "^5.62.0",
+		"@typescript-eslint/parser": "^5.62.0",
+		"autoprefixer": "^10.4.16",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.0.0",
+		"daisyui": "^3.7.7",
+		"eslint": "^8.49.0",
+		"eslint-config-prettier": "^8.10.0",
+		"eslint-plugin-svelte": "^2.33.2",
+		"postcss": "^8.4.30",
+		"prettier": "^2.8.8",
+		"prettier-plugin-svelte": "^2.10.1",
+		"svelte": "^4.2.1",
+		"svelte-check": "^3.5.2",
+		"svelte-copy": "^1.4.1",
+		"svelte-intersection-observer": "^0.10.1",
+		"svelte-kit-sst": "2.25.6",
+		"svelte-share-buttons-component": "^1.5.5",
+		"tailwind-merge": "^1.14.0",
+		"tailwindcss": "^3.3.3",
+		"tailwindcss-animate": "^1.0.7",
+		"tailwindcss-brand-colors": "^0.3.3",
+		"tslib": "^2.6.2",
+		"typescript": "^5.2.2",
+		"vite": "^4.4.9"
+	},
+	"type": "module",
+	"dependencies": {
+		"@revelationsai/core": "*",
+		"@tanstack/svelte-query": "^4.35.3",
+		"ai": "^2.2.13",
+		"autosize": "^6.0.1",
+		"moment": "^2.29.4",
+		"stripe": "^13.6.0",
+		"validator": "^13.11.0"
+	}
 }
