--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -8,19 +8,19 @@
   },
   "devDependencies": {
     "@sparticuz/chromium": "^114.0.0",
-    "@types/aws-lambda": "^8.10.121",
+    "@types/aws-lambda": "^8.10.122",
     "@types/bcryptjs": "^2.4.4",
     "@types/busboy": "^1.5.1",
     "@types/node": "^20.6.3",
     "@types/nodemailer": "^6.4.10",
-    "sst": "2.25.6",
+    "sst": "2.26.5",
     "vitest": "^0.33.0"
   },
   "dependencies": {
     "@middy/core": "^4.6.4",
     "@middy/http-cors": "^4.6.4",
     "@middy/http-error-handler": "^4.6.4",
-    "@revelationsai/core": "*",
+    "@revelationsai/core": "^1.0.0",
     "ai": "^2.2.13",
     "bcryptjs": "^2.4.3",
     "busboy": "^1.6.0",
@@ -29,11 +29,11 @@
     "firebase-admin": "^11.10.1",
     "lambda-stream": "^0.5.0",
     "mammoth": "^1.6.0",
-    "openai": "^4.8.0",
+    "openai": "^4.10.0",
     "pdf-parse": "^1.1.1",
     "pug": "^3.0.2",
     "puppeteer-core": "^20.9.0",
-    "stripe": "^13.6.0",
+    "stripe": "^13.7.0",
     "validator": "^13.11.0"
   }
 }
