Starting to look at in app purchases

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,11 @@ UNSTRUCTURED_API_KEY=
 GOOGLE_API_KEY=
 GOOGLE_CSE_ID=37e80745c342b4d31
 
+# Apple App Store
+APPLE_APP_STORE_SHARED_SECRET=
+APPLE_APP_STORE_KEY_ID=
+APPLE_APP_STORE_ISSUER_ID=
+
 # Apple Auth
 APPLE_CLIENT_ID=com.passgoco.revelationsai.signin
 APPLE_KEY_ID=
