--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   package_info_plus: ^4.1.0
   flutter_web_auth_2: ^2.2.1
   flutter_native_splash: ^2.3.2
+  in_app_purchase: ^3.1.10
 
 dev_dependencies:
   flutter_test:
