--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tsconfig/node16": "^16.1.1",
     "@tsconfig/node18": "^18.2.2",
     "@types/cfn-response": "^1.0.6",
+    "@types/in-app-purchase": "^1.11.1",
     "@types/node": "^20.6.3",
     "@types/pg": "^8.10.2",
     "aws-cdk-lib": "2.95.1",
