--- a/mobile/.env.example
+++ b/mobile/.env.example
@@ -1,3 +1,6 @@
 WEBSITE_URL=https://revelationsai.com
 API_URL=https://api.revelationsai.com
 CHAT_API_URL=
+
+REVENUECAT_APP_STORE_API_KEY=
+REVENUECAT_PLAY_STORE_API_KEY=
