--- a/.github/workflows/prod-android-build.yaml
+++ b/.github/workflows/prod-android-build.yaml
@@ -12,10 +12,11 @@ on:
   workflow_dispatch:
 
 env:
-  # TODO: Figure out how to get these from a single source of truth
   WEBSITE_URL: https://revelationsai.com
   API_URL: https://api.revelationsai.com
   CHAT_API_URL: https://chat.api.revelationsai.com
+
+  REVENUECAT_PLAY_STORE_API_KEY: ${{ secrets.REVENUECAT_PLAY_STORE_API_KEY }}
 
   ENCODED_ANDROID_KEYSTORE: ${{ secrets.ENCODED_ANDROID_KEYSTORE }}
   ANDROID_STORE_PASSWORD: ${{ secrets.ANDROID_STORE_PASSWORD }}
@@ -66,7 +67,13 @@ jobs:
         working-directory: mobile
       - id: build_appbundle
         name: Build App Bundle for Android
-        run: flutter build appbundle --release --obfuscate --split-debug-info=build/android/debug-info
+        run: |
+          flutter build appbundle --release --obfuscate \
+            --split-debug-info=build/android/debug-info \
+            --dart-define WEBSITE_URL=$WEBSITE_URL \
+            --dart-define API_URL=$API_URL \
+            --dart-define CHAT_API_URL=$CHAT_API_URL \
+            --dart-define REVENUECAT_PLAY_STORE_API_KEY=$REVENUECAT_PLAY_STORE_API_KEY
         working-directory: mobile
       - name: Archive App Bundle
         uses: actions/upload-artifact@v2
