--- a/.github/workflows/prod-deploy.yaml
+++ b/.github/workflows/prod-deploy.yaml
@@ -33,6 +33,11 @@ env:
 
   UNSTRUCTURED_API_KEY: ${{ secrets.UNSTRUCTURED_API_KEY }}
 
+  REVENUECAT_PROJECT_ID: ${{ vars.REVENUECAT_PROJECT_ID }}
+  REVENUECAT_API_KEY: ${{ secrets.REVENUECAT_API_KEY }}
+  REVENUECAT_WEBHOOK_SECRET: ${{ secrets.REVENUECAT_WEBHOOK_SECRET }}
+  REVENUECAT_STRIPE_API_KEY: ${{ secrets.REVENUECAT_STRIPE_API_KEY }}
+
   GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
   GOOGLE_CSE_ID: ${{ vars.GOOGLE_CSE_ID }}
 
