--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.3+1
+version: 1.0.4+1
 
 environment:
   sdk: ">=3.1.0 <4.0.0"
@@ -59,6 +59,7 @@ dependencies:
   flutter_web_auth_2: ^2.2.1
   flutter_native_splash: ^2.3.2
   purchases_flutter: ^5.7.0
+  quiver: ^3.2.1
 
 dev_dependencies:
   flutter_test:
