--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,24 +2,6 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Flutter Dev",
-      "type": "dart",
-      "request": "launch",
-      "program": "${workspaceRoot}/mobile/lib/main.dart",
-      "args": ["--dart-define-from-file=.env"],
-      "console": "debugConsole",
-      "preLaunchTask": "prep-flutter-dev"
-    },
-    {
-      "name": "Flutter Release",
-      "type": "dart",
-      "request": "launch",
-      "program": "${workspaceRoot}/mobile/lib/main.dart",
-      "args": ["--dart-define-from-file=.env", "--release"],
-      "console": "debugConsole",
-      "preLaunchTask": "prep-flutter-release"
-    },
-    {
       "name": "Backend Dev",
       "type": "node",
       "request": "launch",
@@ -38,6 +20,15 @@
       "console": "integratedTerminal",
       "cwd": "${workspaceFolder}/packages/website",
       "preLaunchTask": "npm-install"
+    },
+    {
+      "name": "Mobile Dev",
+      "type": "dart",
+      "request": "launch",
+      "program": "${workspaceRoot}/mobile/lib/main.dart",
+      "args": ["--dart-define-from-file=.env"],
+      "console": "debugConsole",
+      "preLaunchTask": "prep-flutter-dev"
     }
   ]
 }
