--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -79,13 +79,14 @@ dev_dependencies:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/icons/icon.png"
+  image_path_ios: "assets/icons/ios-icon.png"
+  image_path_android: "assets/icons/android-icon.png"
   remove_alpha_ios: true
   background_color_ios: "#ffffff"
 
 flutter_native_splash:
   color: "#334155"
-  image: "assets/icons/icon.png"
+  image: "assets/icons/splash-icon.png"
   android: true
   ios: true
 
@@ -101,7 +102,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/icons/icon.png
+    - assets/icons/ios-icon.png
+    - assets/icons/android-icon.png
+    - assets/icons/splash-icon.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
