--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -77,18 +77,26 @@ dev_dependencies:
   change_app_package_name: ^1.1.0
 
 flutter_launcher_icons:
-  android: true
   ios: true
   image_path_ios: "assets/icons/ios-icon.png"
-  image_path_android: "assets/icons/android-icon.png"
   remove_alpha_ios: true
-  background_color_ios: "#ffffff"
+
+  android: true
+  image_path_android: "assets/icons/android-icon.png"
+  adaptive_icon_background: "#334155"
+  adaptive_icon_foreground: "assets/icons/android-icon.png"
 
 flutter_native_splash:
   color: "#334155"
+  color_dark: "#334155"
   image: "assets/icons/splash-icon.png"
-  android: true
+
   ios: true
+
+  android: true
+  android_12:
+    image: "assets/icons/android-12-splash-icon.png"
+    color: "#334155"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -105,8 +113,7 @@ flutter:
     - assets/icons/ios-icon.png
     - assets/icons/android-icon.png
     - assets/icons/splash-icon.png
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+    - assets/icons/android-12-splash-icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
