--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -8,12 +8,12 @@
   },
   "devDependencies": {
     "@sparticuz/chromium": "^114.0.0",
-    "@types/aws-lambda": "^8.10.122",
+    "@types/aws-lambda": "^8.10.123",
     "@types/bcryptjs": "^2.4.4",
     "@types/busboy": "^1.5.1",
     "@types/node": "^20.8.2",
     "@types/nodemailer": "^6.4.11",
-    "sst": "2.26.10",
+    "sst": "2.26.11",
     "vitest": "^0.33.0"
   },
   "dependencies": {
@@ -21,7 +21,7 @@
     "@middy/core": "^4.6.4",
     "@middy/http-cors": "^4.6.4",
     "@middy/http-error-handler": "^4.6.4",
-    "@revelationsai/core": "^1.0.0",
+    "@revelationsai/core": "*",
     "ai": "^2.2.14",
     "bcryptjs": "^2.4.3",
     "busboy": "^1.6.0",
@@ -34,7 +34,7 @@
     "pdf-parse": "^1.1.1",
     "pug": "^3.0.2",
     "puppeteer-core": "^20.9.0",
-    "stripe": "^13.8.0",
+    "stripe": "^13.9.0",
     "validator": "^13.11.0"
   }
 }
