--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -22,10 +22,10 @@
 		"autoprefixer": "^10.4.16",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
-		"daisyui": "^3.8.3",
+		"daisyui": "^3.9.2",
 		"eslint": "^8.50.0",
 		"eslint-config-prettier": "^8.10.0",
-		"eslint-plugin-svelte": "^2.33.2",
+		"eslint-plugin-svelte": "^2.34.0",
 		"postcss": "^8.4.31",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
@@ -33,7 +33,7 @@
 		"svelte-check": "^3.5.2",
 		"svelte-copy": "^1.4.1",
 		"svelte-intersection-observer": "^0.10.1",
-		"svelte-kit-sst": "2.26.10",
+		"svelte-kit-sst": "2.26.11",
 		"svelte-share-buttons-component": "^1.5.5",
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss": "^3.3.3",
@@ -41,16 +41,16 @@
 		"tailwindcss-brand-colors": "^0.3.3",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2",
-		"vite": "^4.4.9"
+		"vite": "^4.4.11"
 	},
 	"type": "module",
 	"dependencies": {
-		"@revelationsai/core": "^1.0.0",
+		"@revelationsai/core": "*",
 		"@tanstack/svelte-query": "^4.35.7",
 		"ai": "^2.2.14",
 		"autosize": "^6.0.1",
 		"moment": "^2.29.4",
-		"stripe": "^13.8.0",
+		"stripe": "^13.9.0",
 		"uuid": "^9.0.1",
 		"validator": "^13.11.0"
 	}
