--- a/.env.example
+++ b/.env.example
@@ -49,9 +49,9 @@ GOOGLE_CLIENT_ID=266624499548-t02vg7n4rviop9g2bsctkvu0na04d23h.apps.googleuserco
 # FACEBOOK_CLIENT_SECRET=
 
 # Email Auth
-EMAIL_FROM=noreply@revelationsai.com
+EMAIL_FROM=postmaster@revelationsai.com
 EMAIL_REPLY_TO=admin@revelationsai.com
-EMAIL_SERVER_HOST=smtp.mailgun.org
+EMAIL_SERVER_HOST=smtp.forwardemail.net
 EMAIL_SERVER_PORT=587
 EMAIL_SERVER_USERNAME=postmaster@revelationsai.com
 EMAIL_SERVER_PASSWORD=
