--- a/.github/workflows/pr-preview.yaml
+++ b/.github/workflows/pr-preview.yaml
@@ -95,6 +95,9 @@ jobs:
         name: Setup Apple Auth Key
         run: |
           echo $ENCODED_APPLE_AUTH_KEY | base64 --decode > apple-auth-key.p8
+      - id: typecheck
+        name: Type check
+        run: npm run typecheck --workspaces
       - id: sst_deploy
         name: Deploy to AWS
         run: npx sst deploy --stage pr-${{ github.event.pull_request.number }}
