--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@aws-sdk/client-sqs": "^3.425.0",
     "@aws-sdk/credential-providers": "^3.425.0",
     "@aws-sdk/s3-request-presigner": "^3.425.0",
+    "@neondatabase/serverless": "^0.6.0",
     "drizzle-orm": "^0.28.6",
     "drizzle-zod": "^0.5.1",
     "langchain": "^0.0.161",
