Looking good with bedrock now

--- a/.env.example
+++ b/.env.example
@@ -68,4 +68,4 @@ STRIPE_WEBHOOK_SECRET=
 # New Relic
 NEW_RELIC_ACCOUNT_ID=4177830
 NEW_RELIC_TRUSTED_ACCOUNT_KEY=4177830
-NEW_RELIC_LICENSE_KEY_SECRET_ARN=arn:aws:secretsmanager:us-east-1:008193302444:secret:NEW_RELIC_LICENSE_KEY-6l9wSH
+NEW_RELIC_LICENSE_KEY_SECRET_ARN=
