--- a/.github/workflows/pr-preview.yaml
+++ b/.github/workflows/pr-preview.yaml
@@ -67,6 +67,7 @@ env:
 
   NEW_RELIC_ACCOUNT_ID: ${{ vars.NEW_RELIC_ACCOUNT_ID }}
   NEW_RELIC_TRUSTED_ACCOUNT_KEY: ${{ vars.NEW_RELIC_TRUSTED_ACCOUNT_KEY }}
+  NEW_RELIC_LICENSE_KEY_SECRET_ARN: ${{ vars.NEW_RELIC_LICENSE_KEY_SECRET_ARN }}
 
   ENCODED_FIREBASE_JSON: ${{ secrets.ENCODED_FIREBASE_JSON }}
 
