--- a/.github/workflows/prod-android-build.yaml
+++ b/.github/workflows/prod-android-build.yaml
@@ -18,6 +18,8 @@ env:
 
   REVENUECAT_PLAY_STORE_API_KEY: ${{ secrets.REVENUECAT_PLAY_STORE_API_KEY }}
 
+  NEW_RELIC_ANDROID_APP_TOKEN: ${{ secrets.NEW_RELIC_ANDROID_APP_TOKEN }}
+
   ENCODED_ANDROID_KEYSTORE: ${{ secrets.ENCODED_ANDROID_KEYSTORE }}
   ANDROID_STORE_PASSWORD: ${{ secrets.ANDROID_STORE_PASSWORD }}
   ANDROID_KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
